--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Interactive Image Page</title>
+    <title>Make Everything Analog</title>
     <style>
         * {
             margin: 0;
@@ -35,7 +35,7 @@
 <body>
     <div class="image-container">
         <!-- Replace 'your-image.jpg' with your actual image filename -->
-        <img src="your-image.jpg" alt="Interactive Image" usemap="#image-map">
+        <img src="4902599555598191598.jpg" alt="Interactive Image" usemap="#image-map">
         
         <map name="image-map">
             <!-- CLICKABLE AREA 1 - External Link -->
